// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message K8sInstanceSyncPerpetualTaskParamsV2 {
  string account_id = 1;
  string org_id = 2;
  string project_id = 3;
  bytes connector_info_dto = 4;
  bytes encrypted_data = 5;
}

message K8sDeploymentReleaseDetails {
  string release_name = 1;
  repeated string namespaces = 2;
  oneof cluster_config {
    CloudClusterConfig cloud_cluster_config = 3;
  }
}

message CloudClusterConfig {
  string cluster_name = 1;
  string subscription_id = 2;
  string resource_group = 3;
  bool use_cluster_admin_credentials = 4;
}
